istio/teddy-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  ports:
  - port: 27017
    name: mongo
  selector:
    app: mongodbs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodbs
  template:
    metadata:
      labels:
        app: mongodbs
    spec:
      containers:
      - name: mongodb
        image: com.teddy.db/mongo:0.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
---
