istio/teddy-gateway-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-https-gateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
      privateKey: /etc/istio/ingressgateway-certs/tls.key
    hosts:
    - "todo.todo"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
spec:
  hosts:
  - "todo.todo"
  gateways:
  - default-https-gateway
  http:
  - match:
    - uri:
        prefix: /uaa
    route:
    - destination:
        port:
          number: 8080
        host: api-uaa
  - match:
    - uri:
        prefix: /base
    route:
    - destination:
        port:
          number: 8080
        host: api-base
  - match:
    - uri:
        prefix: /content
    route:
    - destination:
        port:
          number: 8080
        host: api-content
  - match:
    - uri:
        prefix: /message
    route:
    - destination:
        port:
          number: 8080
        host: api-message
